--- a/myblog/account/templates/account/profile.html
+++ b/myblog/account/templates/account/profile.html
@@ -9,6 +9,6 @@
     <p>Name: Test</p>
     <p>Age: 0</p>
     <p>Status: Basic</p>
-    <a href="#">Exit</a>
+    <a href="{% url 'account:edit' %}">edit</a>
 </body>
 </html>
